--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-    "token": "YOUR TOKEN HERE",
+    "token": "ODkxMTY5NDM5ODYzNjcyODUy.YVMXUw.rJ60rfiEWhuoyymu814_4NGpJcI",
+    
     "guildid": "864067783134543912"
 }
